Changed Color, Scrollbar and Fixed Hero

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,7 +34,7 @@
     --card-foreground: 0 0% 95%;
     --popover: 0 0% 9%;
     --popover-foreground: 0 0% 95%;
-    --primary: 132, 100%, 50%, 1;
+    --primary: 262, 100%, 50%, 1;
     --primary-foreground: 144.9 80.4% 10%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
@@ -58,4 +58,27 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+/* Custom Scroll-Bar */
+
+::-webkit-scrollbar {
+  width: .8rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(122, 122, 122);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(34 211 238);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(8 145 178);
 }
